Restore static template tags.

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
   <!-- Portfolio  -->
@@ -28,7 +29,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/cabin.png' %}" alt="">
           </div>
         </div>
 
@@ -40,7 +41,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="staticfiles/img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/cake.png' %}" alt="">
           </div>
         </div>
 
@@ -52,7 +53,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/circus.png' %}" alt="">
           </div>
         </div>
 
@@ -64,7 +65,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="staticfiles/img/portfolio/game.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/game.png' %}" alt="">
           </div>
         </div>
 
@@ -76,7 +77,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="/staticfiles/img/portfolio/buildings.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/buildings.png' %}" alt="">
           </div>
         </div>
 
@@ -88,7 +89,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="s/staticfiles/img/portfolio/constructionImg1.png" alt="">
+            <img class="img-fluid" src="{% static 'img/portfolio/constructionImg1.png' %}" alt="">
           </div>
         </div>
 
@@ -271,7 +272,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/cabin.png' %}" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">CAPTION</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -310,7 +311,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/cake.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/cake.png' %}" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -349,7 +350,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!--  -->
-                <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/circus.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/circus.png' %}" alt="">
                 <!--  -->
                 <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -388,7 +389,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Image -->
-                <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/game.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/game.png' %}" alt="">
                 <!-- Image Caption -->
                 <p class="mb-5">Building codes ensure that all structures follow the same codes and each structure is safe and accessible!</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -427,7 +428,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Next Image (Here) -->
-                <img class="img-fluid rounded mb-5" src="staticfiles/img/portfolio/safe.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/safe.png' %}" alt="">
                 <!-- Next Caption -->
                 <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -466,7 +467,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Image -->
-                <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/submarine.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/submarine.png' %}" alt="">
                 <!-- Caption Text -->
                 <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
