--- a/zank/codes/templates/codes/crud/create.html
+++ b/zank/codes/templates/codes/crud/create.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
     {% block content %}
 
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <div class="container">
+        <h1>Enter a New Code</h1>
+        <h5>Please fill out the form below.</h5>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
 
-    <input class="btn btn-success" type="submit" value="Confirm">
+            <input class="btn btn-success" type="submit" value="Confirm">
 
 
-    </form>
+        </form>
+    </div>
 
     {% endblock %}
