Complete view to change user status.

--- a/zank/accounts/templates/accounts/signup.html
+++ b/zank/accounts/templates/accounts/signup.html
@@ -5,7 +5,7 @@
 
   <!-- credit to Zain Raza's source code for Travelly, at https://travelly-zr.herokuapp.com/signup/ -->
   <div class="container">
-      <h3>Please help me figure out a header to put here later</h3>
+      <h3>Signup for ZANK!</h3>
       <hr>
       <div class="row mb-10">
           <div class="col">
@@ -26,7 +26,7 @@
                     {% endfor %}
                   <!--{#
 
-                      <!-- Email address field 
+                      <!-- Email address field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_email">Email Address:</label>
@@ -35,7 +35,7 @@
                           </div>
                       </div>
 
-                      <!-- Username field 
+                      <!-- Username field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_username">Username:</label>
@@ -44,7 +44,7 @@
                           </div>
                       </div>
 
-                      <!-- first name field 
+                      <!-- first name field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_first_name">First Name:</label>
@@ -53,7 +53,7 @@
                           </div>
                       </div>
 
-                      <!-- last name field 
+                      <!-- last name field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_last_name">Last Name:</label>
@@ -62,7 +62,7 @@
                           </div>
                       </div>
 
-                      <!-- password field 
+                      <!-- password field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_password1">Password:</label>
@@ -71,7 +71,7 @@
                           </div>
                       </div>
 
-                      <!-- confirm password field 
+                      <!-- confirm password field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_password2">Password Confirmation:</label>
@@ -80,7 +80,7 @@
                           </div>
                       </div>
 
-                      <!-- is_officer field 
+                      <!-- is_officer field
                       <div class="form-group row">
                           <div class="col-8">
                             <label for="id_is_officer">Are You an Archtect or Compliance Officer?</label>
