--- a/zank/accounts/templates/accounts/profile/show_profile.html
+++ b/zank/accounts/templates/accounts/profile/show_profile.html
@@ -17,7 +17,7 @@
         <br>
         <!-- Links to Change Profile Info, or Delete Account -->
         <div class="row">
-            <a class="btn btn-info mr-5" href="#">Update Status</a>
+            <a class="btn btn-info mr-5" href="{% url 'accounts:update-profile' status.id %}">Update Status</a>
             <a href="#" class="btn btn-danger">Delete Account</a>
         </div>
     </div>
