--- a/zank/codes/templates/codes/results.html
+++ b/zank/codes/templates/codes/results.html
@@ -11,7 +11,7 @@
     <!-- TOP NAV -->
     <body style="background-color:#B85750;">
         <nav class="navbar navbar-dark bg-dark">
-		    <a class="navbar-brand" href="../home.html">Zank</a>
+		    <a class="navbar-brand" href="{% url 'codes:home_page' %}">Zank</a>
 		    <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button href="results.html" class="btn btn-secondary" type="submit">Search</button>
