--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -24,7 +24,7 @@
   <title>{% block title %}Zank{% endblock %}</title>
 
 </head>
-
+<body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
@@ -558,4 +558,6 @@
 
     <!-- Custom Scripts -->
     <script src="/js/freelancer.min.js"></script>
+</body>
+
 </html>
