Add signup link to login page.

--- a/zank/accounts/templates/accounts/login.html
+++ b/zank/accounts/templates/accounts/login.html
@@ -41,6 +41,7 @@
                         <div class="col-8">
                             <input type="submit" value="Login" class="btn btn-success">
                             <input type="hidden" name="next" value="{{ next }}">
+                            <a class="btn btn-primary ml-5" href="{% url 'accounts:signup' %}">Sign Up</a>
                         </div>
                     </div>
                 </form>
