--- a/zank/templates/base.html
+++ b/zank/templates/base.html
@@ -24,7 +24,7 @@
   <title>{% block title %}Zank{% endblock %}</title>
 
 </head>
-
+<body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase" id="mainNav">
       <div class="container">
@@ -79,4 +79,5 @@
 
     <!-- Custom Scripts -->
     <script src="/js/freelancer.min.js"></script>
+</body>
 </html>
