--- a/zank/codes/templates/codes/results.html
+++ b/zank/codes/templates/codes/results.html
@@ -14,17 +14,16 @@
 		    <a class="navbar-brand" href="{% url 'codes:home_page' %}">Zank</a>
 		    <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button href="results.html" class="btn btn-secondary" type="submit">Search</button>
+                <button href="{% url 'codes:reference' %}" class="btn btn-secondary" type="submit">Search</button>
             </form>
 	    </nav>
     <!-- JUMBOTRON -->
 	    <div class="jumbotron text-center">
 	        <h1>Building Specifications</h1>
             <br>
-	        <a class="btn btn-secondary" href="../home.html" role="button">Home Page</a>
+	        <a class="btn btn-secondary" href="{% url 'codes:home_page' %}" role="button">Home Page</a>
 	    </div>
-    <!-- LIST OF CODES (that haven't beeen "archived") -->
-        <!-- success message after deletion redirect -- >
+        <!-- List (possible to see messages as well) -->
         {% if messages %}
             <div class="messages">
                 {% for message in messages %}
@@ -35,9 +34,7 @@
         <div class="container">
             <div class="card-columns" style="column-count: 2;">
 		    	{% for code in codes %}
-                    {% if code.is_visible %}
-			    	    {% include 'partials/code_view.html' %}
-                    {% endif %}
+			        {% include 'partials/code_view.html' %}
 		    	{% endfor %}
 		    </div>
         </div>
