--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -64,6 +64,10 @@
         </div>
       </div>
     </nav>
+<!-- Header Image -->
+    <header class="masthead bg-primary text-white text-center">
+      <div class="container d-flex align-items-center flex-column">
+      <img src="{% static 'img/zank.png' %}" alt=""/>
 
 <!-- main body of home.html -->
 <!-- Portfolio  -->
