Delete duplicate home.html.

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -68,6 +68,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container d-flex align-items-center flex-column">
       <img src="{% static 'img/zank.png' %}" alt=""/>
+    </header>
 
 <!-- main body of home.html -->
 <!-- Portfolio  -->
