fixing grammar errors

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -68,6 +68,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container d-flex align-items-center flex-column">
       <img src="{% static 'img/zank.png' %}" alt=""/>
+    </header>
 
 <!-- main body of home.html -->
 <!-- Portfolio  -->
@@ -162,7 +163,7 @@
       </div>
 
     </div>
-    <!-- New Row -->
+    <!-- DELETE PORTFOLIO -->
 
 </div>
 </section>
@@ -189,7 +190,7 @@
         <p class="lead">Welcome to Zank! Your one stop shop to search for all things building codes. You can find ICC regulations and building codes to help you find all answers to questions for your construction endeavors.</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Zank clients come from artchetechural bakcgrounds including construction workers, ICC employees, and infrastructure companies.</p>
+        <p class="lead">Zank clients come from architectural backgrounds including construction workers, ICC employees, and infrastructure companies.</p>
       </div>
     </div>
 
@@ -307,7 +308,7 @@
   </div>
 </section>
 
-<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<!-- Scroll to Top Button -->
 <div class="scroll-to-top d-lg-none position-fixed ">
   <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
     <i class="fa fa-chevron-up"></i>
