fixing grammar errors

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -190,7 +190,7 @@
         <p class="lead">Welcome to Zank! Your one stop shop to search for all things building codes. You can find ICC regulations and building codes to help you find all answers to questions for your construction endeavors.</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Zank clients come from architectural backgrounds including construction workers, ICC employees, and infrastructure companies.</p>
+        <p class="lead">Zank clients come from architectural backgrounds including construction workers, ICC employees, and infrastructure companies. We offer different services based on our clients type of account.</p>
       </div>
     </div>
 
