--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -146,7 +146,7 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="{% static 'img/portfolio/buildings.png' %}" alt="">
+          <img class="img-fluid" src="{% static 'img/portfolio/safe.png' %}" alt="">
         </div>
       </div>
 
@@ -158,7 +158,7 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="{% static 'img/portfolio/constructionImg1.png' %}" alt="">
+          <img class="img-fluid" src="{% static 'img/portfolio/submarine.png' %}" alt="">
         </div>
       </div>
 
