--- a/zank/accounts/templates/accounts/signup.html
+++ b/zank/accounts/templates/accounts/signup.html
@@ -2,7 +2,8 @@
     {% block content %}
 
   <!-- body for the signup page form -->
-
+<link rel="stylesheet" type="text/css" href="../../../../static/css/login.css">
+<style>body {background-color: #B85750;}</style>
   <!-- credit to Zain Raza's source code for Travelly, at https://travelly-zr.herokuapp.com/signup/ -->
   <div class="container">
       <h3>Signup for ZANK!</h3>
